Add automatic KAS API backup generation

--- a/etc/backup_kas.conf
+++ b/etc/backup_kas.conf
@@ -1,9 +1,9 @@
 #!/bin/bash
+# Beispiel-Konfiguration für manuelle Backups
+# Wird nur genutzt, wenn ENABLE_KAS_API_BACKUP=0 bleibt.
 
-mkdir_cd kas/TEST/
-mirror u1234567
-...
+# Beispiel: Webspace spiegeln
+# mirror u1234567 meinprojekt.de
 
-
-database_backup ssh-u1234567 t1234567 t1234567 password
-...
+# Beispiel: Datenbank sichern
+# database_backup ssh-u1234567 dbuser dbname password
