Add interactive config handling

--- a/etc/backup_kas.conf
+++ b/etc/backup_kas.conf
@@ -2,6 +2,12 @@
 # Beispiel-Konfiguration für manuelle Backups
 # Wird nur genutzt, wenn ENABLE_KAS_API_BACKUP=0 bleibt.
 
+# Basis-Credentials (optional, können auch per Umgebung gesetzt werden)
+# KAS_LOGIN="kas12345"
+# KAS_AUTH_DATA="geheim"
+# IMAP_TARGET_HOST="imap.backup.example"
+# IMAP_TARGET_PASSWORD=""
+
 # Beispiel: Webspace spiegeln
 # mirror u1234567 meinprojekt.de
 
