--- a/etc/backup_kas.conf
+++ b/etc/backup_kas.conf
@@ -5,6 +5,8 @@
 # Basis-Credentials (optional, können auch per Umgebung gesetzt werden)
 # KAS_LOGIN="kas12345"
 # KAS_AUTH_DATA="geheim"
+# KAS_AUTH_TYPE="otp"
+# KAS_AUTH_TOTP_SECRET="BASE32GEHEIMNISFÜR2FA" # Nur nötig für otp, erlaubt automatische Codes
 # IMAP_TARGET_HOST="imap.backup.example"
 # IMAP_TARGET_PASSWORD=""
 
