Add automatic KAS session login support

--- a/etc/backup_kas.conf
+++ b/etc/backup_kas.conf
@@ -5,8 +5,10 @@
 # Basis-Credentials (optional, können auch per Umgebung gesetzt werden)
 # KAS_LOGIN="kas12345"
 # KAS_AUTH_DATA="geheim"
+# KAS_PASSWORD="geheimesWebPasswort" # Für automatischen Session-Login, wenn KAS_AUTH_TYPE=session
 # KAS_AUTH_TYPE="otp"
-# KAS_AUTH_TOTP_SECRET="BASE32GEHEIMNISFÜR2FA" # Nur nötig für otp, erlaubt automatische Codes
+# KAS_AUTH_TYPE="session" # Session-ID in KAS_AUTH_DATA hinterlegen oder automatisch holen (Cookie-Wert nach Login)
+# KAS_AUTH_TOTP_SECRET="BASE32GEHEIMNISFÜR2FA" # Nur nötig für otp oder 2FA im Session-Login, erlaubt automatische Codes
 # IMAP_TARGET_HOST="imap.backup.example"
 # IMAP_TARGET_PASSWORD=""
 
